--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 header {
     text-align: center;
     margin: 20px 0;
+	z-index: 5;
 }
 
 header h1 {
@@ -107,6 +108,7 @@ main {
     transition: transform 0.3s ease, box-shadow 0.3s ease, outline 0.3s ease;
     overflow: hidden;
     outline: 0px solid rgba(0,0,60,0.8);
+	z-index: 1;
 }
 
 .project-card:hover {
@@ -132,11 +134,6 @@ main {
     width: 100%;
     height: auto;
     object-fit: cover;
-    border-radius: 10px 0 0 10px;
-}
-
-.reverse .image-container img {
-    border-radius: 0 10px 10px 0;
 }
 
 .content-container {
@@ -206,6 +203,7 @@ footer a:hover {
 
 /* Conteneur englobant pour la musique */
 .music-section {
+    width: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -295,12 +293,53 @@ footer a:hover {
 
 #penguin {
     position: absolute;
+	opacity: 0.8;
     z-index: 0;
     width: 30px;
-    transition: transform 0.5s ease, left 2s ease, top 2s ease;
+    transition: transform 0.5s ease-in-out, left 2s ease-in-out, top 2s ease-in-out;
 }
 
-@media (max-width: 768px) {
+#background-bushes, #background-snowflakes {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
+.bush {
+    position: absolute;
+    background-image: url('img/small-bush.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 50px; 
+    height: 50px;
+    transform-origin: center;
+    opacity: 0.1;
+    pointer-events: auto;
+}
+
+.snow {
+    position: absolute;
+    background-image: url('img/snowflake.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 50px;
+    height: 50px;
+    transform-origin: center;
+	filter: saturate(.5);
+    opacity: 0.25;
+    pointer-events: auto;
+}
+
+@media (max-width: 1450px) {
+	.content-container {
+		padding: 9px;
+	}
+}
+
+@media (max-width: 1300px) {
     .project-card {
         width: 90%;  /* Cartes plus petites sur mobile */
         flex-direction: column;
