--- a/style.css
+++ b/style.css
@@ -394,7 +394,8 @@ footer a:hover {
     margin-bottom: 0;
 }
 
-.new-label {
+.new-label,
+.updated-label {
     position: absolute;
     top: 12px;
     right: 12px;
@@ -417,7 +418,8 @@ footer a:hover {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.project-card:hover .new-label {
+.project-card:hover .new-label,
+.project-card:hover .updated-label {
     transform: scale(1.1) rotate(-1deg);
 	
     animation: shimmer 3s infinite ease-in-out;
