--- a/style.css
+++ b/style.css
@@ -418,9 +418,21 @@ footer a:hover {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
+.project-card.reverse .updated-label,
+.project-card.reverse .new-label {
+    left: 12px;
+}
+
 .project-card:hover .new-label,
 .project-card:hover .updated-label {
     transform: scale(1.1) rotate(-1deg);
+	
+    animation: shimmer 3s infinite ease-in-out;
+}
+
+.project-card.reverse:hover .new-label,
+.project-card.reverse:hover .updated-label {
+    transform: scale(1.1) rotate(1deg);
 	
     animation: shimmer 3s infinite ease-in-out;
 }
